comp1 css update

--- a/style.css
+++ b/style.css
@@ -88,3 +88,26 @@ h2{
   color: grey;
   margin:20px
 }
+
+.headers{
+  font-size: 30px;
+}
+
+.compinfo{
+  font-size: 17px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
