--- a/style.css
+++ b/style.css
@@ -111,3 +111,19 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.aboutinfo{
+  font-size: 30px;
+  margin: 15px;
+}
