--- a/style.css
+++ b/style.css
@@ -157,3 +157,42 @@ td, th {
   font-size: 20px;
   margin: 10px;
 }
+
+.gheader{
+  font-size: 30px;
+}
+
+.gcountry{
+  font-size: 20px;
+}
+
+.gwcaid{
+   font-size: 20px;
+}
+
+.gregisteredevents{
+   font-size: 20px;
+}
+
+.gbutton {
+  background-color: rgba(51, 51, 51, 0.05);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-family: verdana;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  margin: 3px;
+  padding: 10px 12px;
+  text-align: center;
+  transition: all 200ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
