--- a/style.css
+++ b/style.css
@@ -195,3 +195,59 @@ td, th {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
+.lcompheader{
+  font-size: 30px;
+  margin: 20px;
+}
+
+.lcomptext{
+  font-size: 15px;
+  margin: 20px;
+}
+
+.lbutton {
+  background-color: rgba(51, 51, 51, 0.05);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  margin: 3px;
+  padding: 10px 12px;
+  text-align: center;
+  transition: all 200ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.liveimg {
+  position: absolute;
+  left: 15px;
+  top: 87px;
+}
+
+
+.lheader{
+  font-size: 30px;
+  font-family: verdana;
+  position: absolute;
+  top: 122px;
+  left: 140px;
+}
+
+.liveh{
+  font-size: 30px;
+  font-family: verdana;
+}
